# openmsistream

./: pyproject.toml
.github/workflows/: build_and_test.yml
